--- a/packages/frontend/public/index.html
+++ b/packages/frontend/public/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Ferramentas para auxiliar contadores a importar e exportar dados entre vários sistemas."
     />
     <link
       rel="stylesheet"
@@ -14,7 +14,8 @@
       integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
       crossorigin="anonymous"
     />
-    <title>React App</title>
+    <script data-ad-client="ca-pub-8296481720031195" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <title>CTools: Importador de Lançamentos Contábeis (Domínio Sistemas)</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
